--- a/sigbang_flutter/.env.prod
+++ b/sigbang_flutter/.env.prod
@@ -1,4 +1,5 @@
 BASE_URL=https://api.sigbang.com
+PUBLIC_BASE_URL=https://sigbang.com
 ACCESS_LEEWAY_SECONDS=15
 BACKGROUND_CHECK_INTERVAL_SECONDS=30
 PROACTIVE_REFRESH_WINDOW_SECONDS=60
