--- a/sigbang_flutter/pubspec.yaml
+++ b/sigbang_flutter/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   flutter_dotenv: ^5.1.0
+  share_plus: ^10.0.2
 
   flutter_localizations:
     sdk: flutter
