feat: 전반의 단일 이미지 선택도 새 플로우로 통일
RecipeStepsEditor 리팩토링
파일: sigbang_flutter/lib/presentation/recipe_create/widgets/recipe_steps_editor.dart
갤러리 직접 호출 제거 → showImageSourceSheet + ImagePickerService 사용
인플라이트 가드(_isPicking)로 빠른 연속 탭 방지
처리: 선택 직후 ImageProcessingService.processCroppedBytes → onSetStepImage에 temp 파일 경로 전달
이전에 적용된 변경(참고)
대표 이미지(썸네일)와 프로필 아바타도 동일한 플로우로 교체 완료
공통 시트: presentation/common/image_source_sheet.dart
단일 픽커 서비스: core/image/image_picker_service.dart
권한: Android CAMERA 추가, iOS NSCameraUsageDescription 추가
Supabase Storage URL에 캐시버스터 금지
테스트 포인트
레시피 생성 화면에서
대표 이미지 선택: 갤러리/카메라 모두 동작 확인
단계 이미지 추가/교체/삭제: 연속 탭 시 중복 오픈 방지 확인
업로드 후 이미지 URL 로딩 오류 없는지 확인

--- a/sigbang_flutter/android/app/src/main/AndroidManifest.xml
+++ b/sigbang_flutter/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <!-- Android 12 이하 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     
     <application
         android:label="sigbang"
