feat: 추천 모델 기반 작업
1) 운영 가이드 요약
데이터 수집: 노출(impressions)·클릭(click) 이벤트 수집.
학습: 매일 배치로 Postgres에서 데이터 추출 → 경량 모델 학습/스코어링.
서빙: 로그인 사용자 Top-N 사전계산 캐시(결측 시 휴리스틱 폴백).
A/B: 안정 해시로 배정, 응답에 실험값 포함, 이벤트에 함께 로깅.
롤아웃: 0%→10%→50% 단계적 확장, CTR/저장률 모니터링, 즉시 롤백 스위치.

2) 서버 엔드포인트
배치 노출: POST /events/reco/impressions
단건 클릭: POST /events/reco/click
피드/인기/추천 응답에 실험값과 시드 포함: experiment: {id, variant}, pageInfo.seed
안정 해시 배정: 사용자ID/디바이스ID 기반 50/50

3) 클라이언트(Flutter)
화면에 처음 보이는 상위 K 아이템을 배치로 노출 로깅(디바운스).
카드 탭 시 클릭 로깅.
헤더 x-device-id 포함, 응답의 experiment/seed/position/rankScore를 이벤트에 그대로 전달.

4) 학습/서빙 배치
주기: 1일 1회(처음엔 24h), cron 혹은 GitHub Actions로 실행.
파이프라인:
Postgres에서 최근 14일 이벤트 로드 → 라벨링(클릭/저장=1, 미클릭=0)
경량 모델(LightGBM/LogReg) 학습
사용자별 Top-N 산출 → user_recommendations upsert
reco_model_registry 최신 버전 활성화
API는 B 그룹일 때 user_recommendations 우선 사용, 결측 시 기존 휴리스틱 폴백.

5) CI/CD 반영 포인트
배포 시 DB 마이그레이션 실행
배포 후 스모크(헬스/피드) 체크
야간 학습 스케줄 워크플로 추가

6) 피처 플래그/환경변수
EXP_FEED_ALGO_V1_ENABLED=true/false
EXP_FEED_ALGO_V1_SPLIT_B=50
RECO_EVENTS_ENABLED=true/false
EVENT_SAMPLING_RATE=1.0(필요 시 낮출 수 있음)

7) 모니터링/대시보드
적재량: 분/시간당 이벤트 수, 5xx 비율
CTR/저장률: 일/서피스/포지션/실험별
추천 히트율: user_recommendations 적중률
에러/타임아웃: 추천 API P95/P99

8) 롤아웃/롤백
Day 0: 이벤트 로깅만 ON, B=0%
Day 2: 데이터/쿼리 정상 확인 → B=10%
Week 1: B=50%, CTR/저장률/신규노출 비중 모니터링
롤백: EXP_FEED_ALGO_V1_ENABLED=false로 즉시 휴리스틱으로 폴백
원하시면 에이전트 모드로 전환 후 위 항목을 한 번에 적용해드릴게요.

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -63,6 +63,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Run Prisma migrate deploy
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install and migrate
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+        run: |
+          cd sigbang_api
+          npm ci
+          npx prisma migrate deploy
+
       - name: Resolve image to deploy
         id: resolve
         run: |
