chore: reco-train ci 수정

--- a/.github/workflows/reco-train.yml
+++ b/.github/workflows/reco-train.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Run training
         env:
-          DATABASE_URL: ${{ secrets.DIRECT_URL }}
+          DATABASE_URL: ${{ secrets.SUPABASE_POOLER_URL }}
         run: |
           python reco/train.py
 
