feat: 추천 훈련 수정
훈련 주기: .github/workflows/reco-train.yml을 하루 4회(KST 00/06/12/18) 실행으로 수정했습니다.
셔플 주기: getPopularRecipes와 getFeed의 시드 계산을 KST 기준 6시간 슬롯으로 변경해, 하루 4번 리스트가 자연스럽게 회전합니다. 인기/피드의 감쇠시간(tauHours)은 각각 POPULAR_TAU_HOURS(기본 24), FEED_TAU_HOURS(기본 36)로 환경변수 제어 가능하게 했습니다.
추천 API: getRecommendedRecipes가 로그인 사용자일 때 활성 모델(reco_model_registry.isActive=true)과 user_recommendations의 Top-N을 우선 사용하고, 없으면 기존 휴리스틱으로 폴백하도록 추가했습니다. 사전계산 순서를 유지해 반환합니다.
테스트/운영 메모
환경변수로 POPULAR_TAU_HOURS, FEED_TAU_HOURS를 필요 시 조정하세요.
배치가 성공적으로 Top-N을 적재하면, 로그인 사용자의 추천은 배치 결과가 1순위로 반영되고, 6시간마다 셔플 슬롯 변경으로 미세 변화가 체감됩니다.
이상 없으면 다음 배치 사이클(6시간 이내) 후 인기/피드/추천 노출의 순서가 자연스럽게 달라질 것입니다.

--- a/.github/workflows/reco-train.yml
+++ b/.github/workflows/reco-train.yml
@@ -2,7 +2,10 @@ name: Reco Train
 
 on:
   schedule:
-    - cron: "30 18 * * *" # UTC 18:30 (KST 03:30)
+    - cron: "0 15 * * *"  # KST 00:00
+    - cron: "0 21 * * *"  # KST 06:00
+    - cron: "0 03 * * *"  # KST 12:00
+    - cron: "0 09 * * *"  # KST 18:00
   workflow_dispatch:
 
 jobs:
