chore: 로컬 러너에서의 prisma migrate 단계를 제거하고, EC2 원격(SSH)에서 다음 순서로 실행하도록 변경 git/node 설치 → 해당 커밋 체크아웃 → cd sigbang_api && npm ci && DATABASE_URL='$DIRECT_URL' npx prisma migrate deploy 이후 기존과 동일하게 컨테이너 교체/헬스체크 원격 단계에 DIRECT_URL(5432)과 GITHUB_TOKEN/REPO/SHA를 전달 이제 마이그레이션은 EC2에서 5432 DIRECT_URL로 안정적으로 수행되고, GitHub Actions 러너의 IPv4 제약/풀러 이슈와 분리됩니다.

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -63,19 +63,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Run Prisma migrate deploy
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Install and migrate
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          DIRECT_URL: ${{ secrets.DIRECT_URL }}
-        run: |
-          cd sigbang_api
-          npm ci
-          npx prisma migrate deploy
-
       - name: Resolve image to deploy
         id: resolve
         run: |
@@ -102,6 +89,10 @@ jobs:
           GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
           CONTAINER_NAME: sigbang-api
           EXPOSE_PORT: "3000"
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO: ${{ github.repository }}
+          SHA: ${{ github.sha }}
         run: |
           set -euo pipefail
           echo "Resolving API instance by tag Name=${TARGET_NAME_TAG}"
@@ -128,6 +119,20 @@ jobs:
           # Remote replacement of API container
           ssh -o StrictHostKeyChecking=no -i id_ed25519 ubuntu@"$PUBIP" bash -lc "
             set -euo pipefail
+            # Ensure git and node are available
+            command -v git >/dev/null || (sudo apt-get update -y && sudo apt-get install -y git curl)
+            command -v node >/dev/null || (curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash - && sudo apt-get install -y nodejs)
+            # Checkout repository at this commit for migration
+            if [ ! -d ~/sigbang_monorepo ]; then
+              git clone https://x-access-token:${GH_TOKEN}@github.com/${REPO}.git ~/sigbang_monorepo
+            fi
+            cd ~/sigbang_monorepo
+            (git fetch --depth=1 origin ${SHA} || true)
+            (git checkout -q ${SHA} || git checkout -q main)
+            cd sigbang_api
+            npm ci
+            DATABASE_URL='${DIRECT_URL}' npx prisma migrate deploy
+
             IMAGE='${IMAGE}'
             EXPOSE_PORT=${EXPOSE_PORT}
             CONTAINER_NAME='${CONTAINER_NAME}'
