chore: DIRECT_URL 수정
prisma는 schema.prisma 안에서 url과 directUrl 두 환경변수를 모두 해석하려고 해서, 마이그레이션 시 둘 다 환경에 존재해야 합니다.
조치: EC2 원격 단계에서 npx prisma migrate deploy 실행 시 DIRECT_URL도 함께 주입하도록 업데이트했습니다.
변경 사항:
기존: DATABASE_URL='${DIRECT_URL}' npx prisma migrate deploy
수정: DATABASE_URL='${DIRECT_URL}' DIRECT_URL='${DIRECT_URL}' npx prisma migrate deploy
이제 GH 시크릿에 DIRECT_URL이 정의되어 있으면, 원격에서 DATABASE_URL과 DIRECT_URL 모두 세팅되어 P1012 오류 없이 동작합니다.

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -131,7 +131,7 @@ jobs:
             (git checkout -q ${SHA} || git checkout -q main)
             cd sigbang_api
             npm ci
-            DATABASE_URL='${DIRECT_URL}' npx prisma migrate deploy
+            DATABASE_URL='${DIRECT_URL}' DIRECT_URL='${DIRECT_URL}' npx prisma migrate deploy
 
             IMAGE='${IMAGE}'
             EXPOSE_PORT=${EXPOSE_PORT}
