--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -90,6 +90,7 @@ jobs:
           CONTAINER_NAME: sigbang-api
           EXPOSE_PORT: "3000"
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
+          SUPABASE_POOLER_URL: ${{ secrets.SUPABASE_POOLER_URL }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
           SHA: ${{ github.sha }}
@@ -131,7 +132,11 @@ jobs:
             (git checkout -q ${SHA} || git checkout -q main)
             cd sigbang_api
             npm ci
-            DATABASE_URL='${DIRECT_URL}' DIRECT_URL='${DIRECT_URL}' npx prisma migrate deploy
+            POOL_URL='${SUPABASE_POOLER_URL:-}'
+            if [ -z "$POOL_URL" ]; then
+              POOL_URL='${DIRECT_URL}'
+            fi
+            DATABASE_URL="$POOL_URL" DIRECT_URL="$POOL_URL" npx prisma migrate deploy
 
             IMAGE='${IMAGE}'
             EXPOSE_PORT=${EXPOSE_PORT}
