chore: cd 오류 수정
원인: 원격 스크립트가 set -u 상태에서 POOL_URL='${SUPABASE_POOLER_URL:-}'처럼 리터럴로 들어가 변수 확장이 이뤄지지 않아 $POOL_URL이 unset → unbound variable 오류 발생.

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -131,7 +131,7 @@ jobs:
             (git checkout -q ${SHA} || git checkout -q main)
             cd sigbang_api
             npm ci
-            POOL_URL='${SUPABASE_POOLER_URL:-}'
+            POOL_URL="${SUPABASE_POOLER_URL}"
             DATABASE_URL="$POOL_URL" npx prisma migrate deploy
 
             IMAGE='${IMAGE}'
