chore: ci 에러 수정
원인: 러너 스크립트에서 set -u가 켜진 상태에서 SUPABASE_POOLER_URL이 비어 있거나 확장되지 않으면 바로 unbound 에러가 납니다.
조치
러너/원격 스크립트 모두 set -euo → set -eo로 변경해 nounset을 끄고,
원격 실행 전에 안전 가드 추가:

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -94,7 +94,7 @@ jobs:
           REPO: ${{ github.repository }}
           SHA: ${{ github.sha }}
         run: |
-          set -euo pipefail
+          set -eo pipefail
           echo "Resolving API instance by tag Name=${TARGET_NAME_TAG}"
           IID=$(aws ec2 describe-instances \
             --filters "Name=tag:Name,Values=${TARGET_NAME_TAG}" "Name=instance-state-name,Values=running" \
@@ -118,7 +118,7 @@ jobs:
 
           # Remote replacement of API container
           ssh -o StrictHostKeyChecking=no -i id_ed25519 ubuntu@"$PUBIP" bash -lc "
-            set -euo pipefail
+            set -eo pipefail
             # Ensure git and node are available
             command -v git >/dev/null || (sudo apt-get update -y && sudo apt-get install -y git curl)
             command -v node >/dev/null || (curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash - && sudo apt-get install -y nodejs)
@@ -132,6 +132,10 @@ jobs:
             cd sigbang_api
             npm ci
             POOL_URL="${SUPABASE_POOLER_URL}"
+            if [ -z "\$POOL_URL" ]; then
+              echo "ERROR: SUPABASE_POOLER_URL is not set in job secrets." >&2
+              exit 1
+            fi
             DATABASE_URL="$POOL_URL" npx prisma migrate deploy
 
             IMAGE='${IMAGE}'
