chore: ci error
러너에서 Prisma migrate 선실행
checkout 직후 단계 추가: DATABASE_URL: ${{ secrets.SUPABASE_POOLER_URL }} 로
npx --yes prisma@5.22.0 migrate deploy --schema=./sigbang_api/prisma/schema.prisma 실행
SSH 단계에서는 컨테이너 교체만 수행
원격에서 git/node/clone 및 prisma migrate 부분 제거
도커 pull → 기존 컨테이너 정리 → 새 컨테이너 실행 → 헬스체크만 수행

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -63,6 +63,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Prisma migrate (runner, pooler)
+        env:
+          DATABASE_URL: ${{ secrets.SUPABASE_POOLER_URL }}
+        run: |
+          set -eo pipefail
+          echo "Running prisma migrate on runner via pooler..."
+          npx --yes prisma@5.22.0 migrate deploy --schema=./sigbang_api/prisma/schema.prisma
+          echo "Prisma migrate completed."
+
       - name: Resolve image to deploy
         id: resolve
         run: |
@@ -130,13 +139,7 @@ jobs:
             (git fetch --depth=1 origin ${SHA} || true)
             (git checkout -q ${SHA} || git checkout -q main)
             cd sigbang_api
-            if [ -z "${SUPABASE_POOLER_URL}" ]; then
-              echo "ERROR: SUPABASE_POOLER_URL is not set in job secrets." >&2
-              exit 1
-            fi
-            echo "Running prisma migrate deploy via pooler..."
-            DATABASE_URL='${SUPABASE_POOLER_URL}' npx --yes prisma@5.22.0 migrate deploy --schema=./prisma/schema.prisma || { echo "Prisma migrate failed"; exit 1; }
-            echo "Prisma migrate completed."
+            # Prisma migrate already handled on runner
 
             IMAGE='${IMAGE}'
             EXPOSE_PORT=${EXPOSE_PORT}
