--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -69,6 +69,13 @@ jobs:
           PRISMA_MIGRATION_ENGINE_LOG_LEVEL: debug
         run: |
           set -eo pipefail
+          # Augment DATABASE_URL with pooler-friendly params if missing
+          DB_URL="$DATABASE_URL"
+          if [[ "$DB_URL" == *"?"* ]]; then
+            export DATABASE_URL="${DB_URL}&pgbouncer=true&connection_limit=1"
+          else
+            export DATABASE_URL="${DB_URL}?pgbouncer=true&connection_limit=1"
+          fi
           echo "Prisma CLI version:"
           npx --yes prisma@5.22.0 -v
           echo "Prisma migrate status (pooler)..."
@@ -80,6 +87,13 @@ jobs:
           PRISMA_MIGRATION_ENGINE_LOG_LEVEL: debug
         run: |
           set -eo pipefail
+          # Augment DATABASE_URL with pooler-friendly params if missing
+          DB_URL="$DATABASE_URL"
+          if [[ "$DB_URL" == *"?"* ]]; then
+            export DATABASE_URL="${DB_URL}&pgbouncer=true&connection_limit=1"
+          else
+            export DATABASE_URL="${DB_URL}?pgbouncer=true&connection_limit=1"
+          fi
           echo "::group::Running prisma migrate on runner via pooler..."
           echo "DATABASE_URL host=$(echo "$DATABASE_URL" | sed -E 's#^.*://[^@]*@([^/?]+).*$#\1#')"
           START=$(date +%s)
