chore: 기존 EC2 내부의 prisma migrate deploy 단계는 제거
api-deploy.yml에 db-push-prod job을 추가해서, build-and-push 이후 GitHub Actions에서 SUPABASE_POOLER_URL을 DATABASE_URL로 세팅하고 npx prisma db push를 자동 실행하도록 구성했어요.
기존 EC2 내부의 prisma migrate deploy 단계는 제거했고, 이제 deploy-api-eic job은 오직 새 Docker 이미지 배포 + health check만 수행합니다.
두 job 모두 environment: production을 사용하므로, GitHub에서 production 환경을 보호 설정하면 배포/DB 변경 전에 승인 단계를 둘 수 있습니다.
결과적으로, main에 머지 → 이미지 빌드 → prod DB에 db push → EC2에 새 이미지 배포라는, 말씀하신 MVP용 push-only 자동 배포 플로우가 완성된 상태입니다.

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -54,9 +54,48 @@ jobs:
           cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
           cache-to: type=inline
 
-  deploy-api-eic:
+  db-push-prod:
     needs: build-and-push
     runs-on: ubuntu-latest
+    environment: production
+    defaults:
+      run:
+        working-directory: sigbang_api
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: |
+            sigbang_api/package-lock.json
+            package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run prisma db push to production (pooler)
+        env:
+          SUPABASE_POOLER_URL: ${{ secrets.SUPABASE_POOLER_URL }}
+        run: |
+          set -eo pipefail
+          if [ -z "${SUPABASE_POOLER_URL}" ]; then
+            echo "ERROR: SUPABASE_POOLER_URL is not set." >&2
+            exit 1
+          fi
+          DB_URL="${SUPABASE_POOLER_URL}"
+          if [[ "$DB_URL" == *"?"* ]]; then
+            export DATABASE_URL="${DB_URL}&pgbouncer=true&connection_limit=1"
+          else
+            export DATABASE_URL="${DB_URL}?pgbouncer=true&connection_limit=1"
+          fi
+          npx prisma db push --schema=./prisma/schema.prisma
+
+  deploy-api-eic:
+    needs: [build-and-push, db-push-prod]
+    runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: read
       id-token: write
@@ -89,7 +128,6 @@ jobs:
           GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
           CONTAINER_NAME: sigbang-api
           EXPOSE_PORT: "3000"
-          SUPABASE_POOLER_URL: ${{ secrets.SUPABASE_POOLER_URL }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPO: ${{ github.repository }}
           SHA: ${{ github.sha }}
@@ -116,35 +154,11 @@ jobs:
             --instance-os-user ubuntu --ssh-public-key file://id_ed25519.pub \
             --region "$AWS_REGION" >/dev/null
 
-          # Remote replacement of API container + run prisma migrate on EC2
+          # Remote replacement of API container only (DB schema is managed via db-push-prod job)
           ssh -o ServerAliveInterval=10 -o ServerAliveCountMax=12 -o StrictHostKeyChecking=no -i id_ed25519 ubuntu@"$PUBIP" bash -lc "
             set -eo pipefail
-            # Ensure git and node are available
+            # Ensure git is available (for potential future use)
             command -v git >/dev/null || (sudo apt-get update -y && sudo apt-get install -y git curl)
-            command -v node >/dev/null || (curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash - && sudo apt-get install -y nodejs)
-            # Checkout repository at this commit for migration
-            if [ ! -d ~/sigbang_monorepo ]; then
-              git clone https://x-access-token:${GH_TOKEN}@github.com/${REPO}.git ~/sigbang_monorepo
-            fi
-            cd ~/sigbang_monorepo
-            (git fetch --depth=1 origin ${SHA} || true)
-            (git checkout -q ${SHA} || git checkout -q main)
-            cd sigbang_api
-            # Run prisma migrate on EC2 using pooler URL
-            if [ -z \"${SUPABASE_POOLER_URL}\" ]; then
-              echo \"ERROR: SUPABASE_POOLER_URL is not set in job secrets.\" >&2
-              exit 1
-            fi
-            echo 'Running prisma migrate on EC2 via pooler...'
-            DB_URL='${SUPABASE_POOLER_URL}'
-            if [[ \"\$DB_URL\" == *\"?\"* ]]; then
-              export DATABASE_URL=\"\${DB_URL}&pgbouncer=true&connection_limit=1\"
-            else
-              export DATABASE_URL=\"\${DB_URL}?pgbouncer=true&connection_limit=1\"
-            fi
-            export PRISMA_MIGRATION_ENGINE_LOG_LEVEL=debug
-            timeout 300s npx --yes prisma@5.22.0 migrate deploy --schema=./prisma/schema.prisma || { echo 'Prisma migrate failed'; exit 1; }
-            echo 'Prisma migrate completed.'
 
             IMAGE='${IMAGE}'
             EXPOSE_PORT=${EXPOSE_PORT}
@@ -163,5 +177,4 @@ jobs:
             sudo docker ps -a | sed -n '1p;/sigbang-api/p'
             sudo docker inspect -f 'Image={{.Config.Image}} State={{.State.Status}}' sigbang-api
           "
-
 
