chore: ci error
curl: (56) Recv failure: Connection reset by peer 때문에 GitHub Actions 잡이 실패하고 있습니다.
로그 상 bash: -c: option requires an argument 경고도 보이지만, 실제 실패 원인은 /health 헬스체크가 너무 빨라서(앱이 아직 뜨기 전) 연결이 리셋되는 것에 가깝습니다.
적용한 수정 내용
a

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -167,8 +167,21 @@ jobs:
             sudo docker rm -f \"\$CONTAINER_NAME\" || true
             [ -f \"\$ENV_FILE\" ] && ENV_FILE_ARG='--env-file '\$ENV_FILE'' || ENV_FILE_ARG=''
             sudo docker run --pull=always -d --name \"\$CONTAINER_NAME\" --restart=always \$ENV_FILE_ARG -p \$EXPOSE_PORT:3000 \"\$IMAGE\"
-            sleep 3
-            curl -fsS http://localhost:\$EXPOSE_PORT/health >/dev/null
+            # Wait for the container to become healthy (API can take a bit to start)
+            HEALTH_OK=0
+            for i in {1..20}; do
+              if curl -fsS \"http://localhost:\$EXPOSE_PORT/health\" >/dev/null; then
+                HEALTH_OK=1
+                break
+              fi
+              echo \"Health check failed (\$i/20), retrying in 3s...\"
+              sleep 3
+            done
+            if [ \"\$HEALTH_OK\" -ne 1 ]; then
+              echo \"Health check failed after retries. Showing recent container logs:\"
+              sudo docker logs \"\$CONTAINER_NAME\" || true
+              exit 1
+            fi
             sudo docker ps -a | sed -n '1p;/sigbang-api/p'
             sudo docker inspect -f 'Image={{.Config.Image}} State={{.State.Status}}' sigbang-api
           "
