chore: prisma ci/cd 워크플로우 및 마이그레이션 싱크
스키마 변경 (로컬)
schema.prisma 수정

npm run prisma:migrate  # = prisma migrate dev
npm run prisma:generate (필요시)

CI (테스트용 DB)
테스트용 DB에 npm run prisma:deploy 실행 → 마이그레이션 검증
빌드/테스트

CD / PRD
지금 api-deploy.yml에서:
db-migrate-prod Job이 npx prisma migrate deploy 실행
그 다음 deploy-api-eic가 컨테이너 롤

--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -54,7 +54,7 @@ jobs:
           cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
           cache-to: type=inline
 
-  db-push-prod:
+  db-migrate-prod:
     needs: build-and-push
     runs-on: ubuntu-latest
     environment: production
@@ -75,7 +75,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run prisma db push to production (pooler)
+      - name: Run prisma migrate deploy to production (pooler)
         env:
           DIRECT_URL: ${{ secrets.DIRECT_URL }}
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
@@ -85,10 +85,10 @@ jobs:
             echo "ERROR: DIRECT_URL is not set." >&2
             exit 1
           fi          
-          npx prisma db push --schema=./prisma/schema.prisma
+          npx prisma migrate deploy --schema=./prisma/schema.prisma
 
   deploy-api-eic:
-    needs: [build-and-push, db-push-prod]
+    needs: [build-and-push, db-migrate-prod]
     runs-on: ubuntu-latest
     environment: production
     permissions:
