--- a/.github/workflows/deploy-web-ec2.yml
+++ b/.github/workflows/deploy-web-ec2.yml
@@ -99,6 +99,8 @@ jobs:
             if echo \"\$IMAGE\" | grep -q '^ghcr.io/' && [ -n '${GHCR_USERNAME}' ] && [ -n '${GHCR_TOKEN}' ]; then
               echo '${GHCR_TOKEN}' | sudo docker login ghcr.io -u '${GHCR_USERNAME}' --password-stdin || true
             fi
+            # Clean up unused Docker data to reduce disk usage before pulling
+            sudo docker system prune -af || true
             sudo docker pull \"\$IMAGE\"
             sudo docker ps --filter \"publish=\$EXPOSE_PORT\" -q | xargs -r sudo docker rm -f || true
             sudo docker rm -f \"\$CONTAINER_NAME\" || true
