--- a/.github/workflows/reco-train.yml
+++ b/.github/workflows/reco-train.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run training
         env:
-          DATABASE_URL: ${{ secrets.SUPABASE_POOLER_URL }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           python reco/train.py
 
