--- a/.github/workflows/deploy-web-ec2.yml
+++ b/.github/workflows/deploy-web-ec2.yml
@@ -41,7 +41,7 @@ jobs:
         id: image
         run: echo "image=ghcr.io/${{ github.repository_owner }}/sigbang_user_front:${{ github.sha }}" >> $GITHUB_OUTPUT
 
-  deploy-web-eic:
+  deploy-web-ssm:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
@@ -60,7 +60,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ap-northeast-2
-      - name: Deploy Web via EC2 Instance Connect (SSH)
+      - name: Deploy Web via SSM RunCommand (no SSH)
         env:
           IMAGE: ${{ steps.resolve.outputs.image }}
           AWS_REGION: ap-northeast-2
@@ -79,37 +79,42 @@ jobs:
             echo "No running instance found with Name=${TARGET_NAME_TAG}"
             exit 1
           fi
-          AZ=$(aws ec2 describe-instances --instance-ids "$IID" \
-            --query "Reservations[0].Instances[0].Placement.AvailabilityZone" --output text --region "$AWS_REGION")
-          PUBIP=$(aws ec2 describe-instances --instance-ids "$IID" \
-            --query "Reservations[0].Instances[0].PublicIpAddress" --output text --region "$AWS_REGION")
-          echo "Target: $IID ($AZ) public-ip=$PUBIP"
+          echo "Target instance: $IID"
 
-          ssh-keygen -t ed25519 -N "" -f id_ed25519
-          aws ec2-instance-connect send-ssh-public-key \
-            --instance-id "$IID" --availability-zone "$AZ" \
-            --instance-os-user ubuntu --ssh-public-key file://id_ed25519.pub \
-            --region "$AWS_REGION" >/dev/null
+          cat >ssm-deploy-web.json <<EOF
+          {
+            "DocumentName": "AWS-RunShellScript",
+            "Comment": "Deploy sigbang-web container via SSM",
+            "InstanceIds": ["$IID"],
+            "Parameters": {
+              "commands": [
+                "set -euo pipefail",
+                "IMAGE='${IMAGE}'",
+                "EXPOSE_PORT=${EXPOSE_PORT}",
+                "CONTAINER_NAME='${CONTAINER_NAME}'",
+                "if echo \\"$IMAGE\\" | grep -q '^ghcr.io/' && [ -n '${GHCR_USERNAME}' ] && [ -n '${GHCR_TOKEN}' ]; then echo '${GHCR_TOKEN}' | sudo docker login ghcr.io -u '${GHCR_USERNAME}' --password-stdin || true; fi",
+                "sudo docker system prune -af || true",
+                "sudo docker pull \\"$IMAGE\\"",
+                "sudo docker ps --filter \\"publish=$EXPOSE_PORT\\" -q | xargs -r sudo docker rm -f || true",
+                "sudo docker rm -f \\"$CONTAINER_NAME\\" || true",
+                "[ -f /home/ubuntu/web.env ] && ENV_FILE_ARG='--env-file /home/ubuntu/web.env' || ENV_FILE_ARG=''",
+                "sudo docker run --pull=always -d --name \\"$CONTAINER_NAME\\" --restart=always $ENV_FILE_ARG -p $EXPOSE_PORT:3000 \\"$IMAGE\\"",
+                "sleep 3",
+                "curl -fsS http://localhost:$EXPOSE_PORT/robots.txt >/dev/null",
+                "sudo docker ps -a | sed -n '1p;/$CONTAINER_NAME/p'",
+                "sudo docker inspect -f 'Image={{.Config.Image}} State={{.State.Status}}' $CONTAINER_NAME"
+              ]
+            }
+          }
+          EOF
 
-          ssh -o StrictHostKeyChecking=no -i id_ed25519 ubuntu@"$PUBIP" bash -lc "
-            set -euo pipefail
-            IMAGE='${IMAGE}'
-            EXPOSE_PORT=${EXPOSE_PORT}
-            CONTAINER_NAME='${CONTAINER_NAME}'
-            if echo \"\$IMAGE\" | grep -q '^ghcr.io/' && [ -n '${GHCR_USERNAME}' ] && [ -n '${GHCR_TOKEN}' ]; then
-              echo '${GHCR_TOKEN}' | sudo docker login ghcr.io -u '${GHCR_USERNAME}' --password-stdin || true
-            fi
-            # Clean up unused Docker data to reduce disk usage before pulling
-            sudo docker system prune -af || true
-            sudo docker pull \"\$IMAGE\"
-            sudo docker ps --filter \"publish=\$EXPOSE_PORT\" -q | xargs -r sudo docker rm -f || true
-            sudo docker rm -f \"\$CONTAINER_NAME\" || true
-            [ -f /home/ubuntu/web.env ] && ENV_FILE_ARG='--env-file /home/ubuntu/web.env' || ENV_FILE_ARG=''
-            sudo docker run --pull=always -d --name \"\$CONTAINER_NAME\" --restart=always \$ENV_FILE_ARG -p \$EXPOSE_PORT:3000 \"\$IMAGE\"
-            sleep 3
-            curl -fsS http://localhost:\$EXPOSE_PORT/robots.txt >/dev/null
-            sudo docker ps -a | sed -n '1p;/sigbang-web/p'
-            sudo docker inspect -f 'Image={{.Config.Image}} State={{.State.Status}}' sigbang-web
-          "
+          CMD_ID=$(aws ssm send-command \
+            --cli-input-json file://ssm-deploy-web.json \
+            --region "$AWS_REGION" \
+            --query "Command.CommandId" \
+            --output text)
+
+          echo "SSM command sent. CommandId=$CMD_ID"
+
 
 
