chore: deploy-web-ec2.yml 트리거/배포 동작을 바꿨습니다. push 이벤트 시에는 이제 Docker 이미지 빌드 + GHCR 푸시만 하고, 배포(deploy-web-ssm job)는 workflow_dispatch(수동 실행) 일 때만 돌도록 if: github.event_name == 'workflow_dispatch' 를 추가했습니다. deploy-web-ssm job 에 environment: production 을 설정했습니다. GitHub 리포지토리 Settings → Environments → production 에서 Required reviewers 를 걸어두면, 이제 누군가 수동으로 배포 workflow 를 실행해도, 승인 없이는 실제 배포가 안 되는 구조로 만들 수 있습니다. 지금부터 어떻게 쓰면 되는지 코드 머지 → 자동으로 하는 일 main/master 에 머지되면, 예전처럼 build-and-push job 이 돌아가서 ghcr.io/sigbang/sigbang_user_front:<SHA> 이미지를 빌드/푸시합니다. 이 시점에는 EC2 배포는 아직 안 됨. 배포가 필요할 때 GitHub → Actions → Deploy user front (EC2 + ALB) 워크플로우 선택. Run workflow 버튼으로 수동 실행. (선택) production environment 에 Required reviewers 를 설정해 두었으면, 승인자가 Approve 해야 deploy-web-ssm job 이 실제로 돌아갑니다. 이렇게 해서, “머지나 CI 설정 변경 → 즉시 프로덕션 배포/백도어” 경로는 차단했고, 추가로 OIDC 전환이나 이미지 스캔 도입 같은 건 원하면 단계별로 더 같이 바꿔볼 수 있습니다.

--- a/.github/workflows/deploy-web-ec2.yml
+++ b/.github/workflows/deploy-web-ec2.yml
@@ -7,6 +7,9 @@ on:
       - "sigbang_user_front/**"
       - ".github/workflows/deploy-web-ec2.yml"
       - "sigbang_infra/**"
+  # NOTE:
+  # - push: 브랜치에 머지되면 Docker 이미지만 빌드/푸시합니다 (자동).
+  # - workflow_dispatch: 사람이 수동으로 실행했을 때만 프로덕션 배포가 진행됩니다.
   workflow_dispatch:
 
 permissions:
@@ -43,6 +46,11 @@ jobs:
 
   deploy-web-ssm:
     needs: build-and-push
+    # 프로덕션 배포는 수동(workflow_dispatch)으로 실행될 때만 수행되도록 제한
+    if: github.event_name == 'workflow_dispatch'
+    # GitHub UI에서 production 환경에 Required reviewers 를 걸어두면
+    # 배포 전에 사람 승인 단계를 추가할 수 있습니다.
+    environment: production
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
