--- a/.github/workflows/deploy-web-ec2.yml
+++ b/.github/workflows/deploy-web-ec2.yml
@@ -95,12 +95,13 @@ jobs:
             "Comment": "Deploy sigbang-web container via SSM",
             "InstanceIds": ["$IID"],
             "Parameters": {
-              "commands": [
+            "commands": [
+                "touch /tmp/ssm-deploy-web-test && echo 'hello-from-ssm' > /tmp/ssm-deploy-web-test.txt",
                 "set -euo pipefail",
                 "IMAGE='${IMAGE}'",
                 "EXPOSE_PORT=${EXPOSE_PORT}",
                 "CONTAINER_NAME='${CONTAINER_NAME}'",
-                "echo '[deploy-web-ssm] Starting deploy of $IMAGE' | sudo tee -a /var/log/userdata-web.log >/dev/null || true",
+                "echo '[deploy-web-ssm] Starting deploy of $IMAGE' | sudo tee -a /var/log/userdata-web.log >/dev/null",
                 "if echo \\"$IMAGE\\" | grep -q '^ghcr.io/' && [ -n '${GHCR_USERNAME}' ] && [ -n '${GHCR_TOKEN}' ]; then echo '${GHCR_TOKEN}' | sudo docker login ghcr.io -u '${GHCR_USERNAME}' --password-stdin || true; fi",
                 "sudo docker system prune -af || true",
                 "sudo docker pull \\"$IMAGE\\"",
@@ -109,7 +110,7 @@ jobs:
                 "[ -f /home/ubuntu/web.env ] && ENV_FILE_ARG='--env-file /home/ubuntu/web.env' || ENV_FILE_ARG=''",
                 "sudo docker run --pull=always -d --name \\"$CONTAINER_NAME\\" --restart=always $ENV_FILE_ARG -p $EXPOSE_PORT:3000 \\"$IMAGE\\"",
                 "sleep 3",
-                "echo '[deploy-web-ssm] Started $CONTAINER_NAME with $IMAGE' | sudo tee -a /var/log/userdata-web.log >/dev/null || true",
+                "echo '[deploy-web-ssm] Started $CONTAINER_NAME with $IMAGE' | sudo tee -a /var/log/userdata-web.log >/dev/null",
                 "curl -fsS http://localhost:$EXPOSE_PORT/robots.txt >/dev/null",
                 "sudo docker ps -a | sed -n '1p;/$CONTAINER_NAME/p'",
                 "sudo docker inspect -f 'Image={{.Config.Image}} State={{.State.Status}}' $CONTAINER_NAME"
